Make MVVM Upload screen with navigation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">FlexVision</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="preview">Preview</string>
+    <string name="videos_menu">Videos</string>
+    <string name="save">Save</string>
+    <string name="delete">Delete</string>
+    <string name="menu">Menu</string>
+    <string name="add_video">Add Video</string>
+    <string name="flex_vision">Flex Vision</string>
+    <string name="new_video">New video</string>
 </resources>
